--- a/UserPathViewController.xib
+++ b/UserPathViewController.xib
@@ -185,7 +185,6 @@
 						<string key="NSFrame">{{0, 50}, {320, 380}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -378,6 +377,8 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="addPathButtonPressed:">id</string>
 						<string key="backButtonPressed:">id</string>
+						<string key="handleTapGesture:">UITapGestureRecognizer</string>
+						<string key="pathImageButtonPressed:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="addPathButtonPressed:">
@@ -386,6 +387,14 @@
 						</object>
 						<object class="IBActionInfo" key="backButtonPressed:">
 							<string key="name">backButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="handleTapGesture:">
+							<string key="name">handleTapGesture:</string>
+							<string key="candidateClassName">UITapGestureRecognizer</string>
+						</object>
+						<object class="IBActionInfo" key="pathImageButtonPressed:">
+							<string key="name">pathImageButtonPressed:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
